# GaussTR

./: .gitignore  README.md  __init__.py  pyproject.toml
config/: __init__.py  base.py  gausstr_dinov3.yaml  gausstr_featup.yaml
dataset/: __init__.py  collate.py  datamodule.py  dataset.py  transforms.py
evaluation/: __init__.py  occ_metric.py
models/: __init__.py  deformable_attn.py  fast_voxelizer.py  gausstr.py  gausstr_decoder.py  gausstr_head.py  gsplat_rasterization.py  optimized_voxelizer.py  pytorch_voxelizer.py  utils.py  vitdet_fpn.py
models/cuda_msda/: __init__.py
models/cuda_msda/src/cuda/: ms_deform_attn_cuda.cu
models/cuda_voxelizer/: __init__.py  cuda_voxelizer.py  setup.py  voxelize_cuda.cu
scripts/: __init__.py  convert_checkpoint.py  test.py  test_instantiation.py  train.py  visualize.py  visualize_standalone.py
visualization/: README.md  __init__.py  bev.py  callbacks.py  color_maps.py  composite.py  utils.py  voxel_3d.py
